change directoryfor index.html to root

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nicolas Bauer's site</title>
   <link rel="stylesheet" type="text/css" href="../resources/css/styles.css">
+  <script src="../resources/JavaScript/main.js" defer></script>
 </head>
 <body>
 
@@ -23,7 +24,10 @@
     <!-- A propos de moi -->
     <article id="about-me">
       <h2>Présentation</h2>
-        <p>Je m'appelle Nicolas Bauer, 20 ans, je suis passionné par le développement web et la computer science, mon but est d'être Software Engineer, pour aller encore plus loin Architecte Software (mais ça c'est un rêve encore).</p>
+      <figure id="figNico">
+        <img src="../resources/images/Nicolas-Photo-CV.png" alt="Photo de Nicolas Bauer" id="imgNico" width="100" height="100">
+      </figure>
+      <p>Je m'appelle Nicolas Bauer, 20 ans, je suis passionné par le développement web et la computer science, mon but est d'être Software Engineer, pour aller encore plus loin Architecte Software (mais ça c'est un rêve encore).</p>
     </article>
 
     <!-- Les projets -->
@@ -37,7 +41,7 @@
 
   <footer id="contact">
     <h2>Contact</h2>
-    <address>Contactez moi : <a href="mailto:n.bauer20@gmail.com">Mail Personnel</a></address>
+    <address>Contactez moi : <a href="mailto:bauer.nicolas266@gmail.com">Mail Personnel</a></address>
     <p>&copy; Tout droits réservés</p>
   </footer>
 </body>
