--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nicolas Bauer's site</title>
-  <link rel="stylesheet" type="text/css" href="../resources/css/styles.css">
-  <script src="../resources/JavaScript/main.js" defer></script>
+  <link rel="stylesheet" type="text/css" href="./resources/css/styles.css">
+  <script src="./resources/JavaScript/main.js" defer></script>
 </head>
 <body>
 
@@ -25,7 +25,7 @@
     <article id="about-me">
       <h2>Présentation</h2>
       <figure id="figNico">
-        <img src="../resources/images/Nicolas-Photo-CV.png" alt="Photo de Nicolas Bauer" id="imgNico" width="100" height="100">
+        <img src="./resources/images/Nicolas-Photo-CV.png" alt="Photo de Nicolas Bauer" id="imgNico" width="100" height="100">
       </figure>
       <p>Je m'appelle Nicolas Bauer, 20 ans, je suis passionné par le développement web et la computer science, mon but est d'être Software Engineer, pour aller encore plus loin Architecte Software (mais ça c'est un rêve encore).</p>
     </article>
